--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         if (isSignedIn) {
           authorizeButton.style.display = 'none';
           signoutButton.style.display = 'block';
-          listUpcomingEvents();
+          listPrototype();
         } else {
           authorizeButton.style.display = 'block';
           signoutButton.style.display = 'none';
@@ -105,29 +105,19 @@
        * the authorized user's calendar. If no events are found an
        * appropriate message is printed.
        */
-      function listUpcomingEvents() {
-        gapi.client.calendar.events.list({
-          'calendarId': 'primary',
-          'timeMin': (new Date()).toISOString(),
-          'showDeleted': false,
-          'singleEvents': true,
-          'maxResults': 10,
-          'orderBy': 'startTime'
+      function listPrototype() {
+        gapi.client.calendar.calendarList.list({
         }).then(function(response) {
-          var events = response.result.items;
-          appendPre('Upcoming events:');
+          var itemlist = response.result.items;
+          appendPre('Calendars:');
 
-          if (events.length > 0) {
-            for (i = 0; i < events.length; i++) {
-              var event = events[i];
-              var when = event.start.dateTime;
-              if (!when) {
-                when = event.start.date;
-              }
-              appendPre(event.summary + ' (' + when + ')')
+          if (itemlist.length > 0) {
+            for (i = 0; i < itemlist.length; i++) {
+              var item = itemlist[i];
+              appendPre(item.id + ' :' + item.summary);
             }
           } else {
-            appendPre('No upcoming events found.');
+            appendPre('No items found.');
           }
         });
       }
